force-app/main/default/objects/Notices__c/Notices__c.object-meta.xml
<CustomObject>
    <label>Notice</label>
    <nameField>
        <label>Notice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>