force-app/main/default/objects/Notices__c/fields/Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority__c</fullName>
    <label>Issuing Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income Tax Department</fullName>
            </value>
            <value>
                <fullName>GST Department</fullName>
            </value>
            <value>
                <fullName>Central Board of Direct Taxes (CBDT)</fullName>
            </value>
            <value>
                <fullName>Central Board of Indirect Taxes and Customs (CBIC)</fullName>
            </value>
            <value>
                <fullName>Reserve Bank of India (RBI)</fullName>
            </value>
            <value>
                <fullName>Securities and Exchange Board of India (SEBI)</fullName>
            </value>
            <value>
                <fullName>Customs Department</fullName>
            </value>
            <value>
                <fullName>Ministry of Corporate Affairs (MCA)</fullName>
            </value>
            <value>
                <fullName>Local Tax Authority</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>