force-app/main/default/objects/Notices__c/fields/Last_Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Followup_Date__c</fullName>
    <label>Last Followup Date</label>
    <type>Date</type>
</CustomField>