force-app/main/default/objects/Notices__c/fields/Notice_Category__c.field-meta.xml
<CustomField>
    <fullName>Notice_Category__c</fullName>
    <label>Notice Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income Tax Notice</fullName>
            </value>
            <value>
                <fullName>GST Notice</fullName>
            </value>
            <value>
                <fullName>Audit Notice</fullName>
            </value>
            <value>
                <fullName>Legal Notice</fullName>
            </value>
            <value>
                <fullName>Compliance Notice</fullName>
            </value>
            <value>
                <fullName>Tax Demand Notice</fullName>
            </value>
            <value>
                <fullName>Penalty Notice</fullName>
            </value>
            <value>
                <fullName>Tax Assessment Notice</fullName>
            </value>
            <value>
                <fullName>Customs Notice</fullName>
            </value>
            <value>
                <fullName>RBI Notice</fullName>
            </value>
            <value>
                <fullName>FEMA Notice</fullName>
            </value>
            <value>
                <fullName>ESI/PF Notice</fullName>
            </value>
            <value>
                <fullName>Notice of Appeal</fullName>
            </value>
            <value>
                <fullName>Court Notice</fullName>
            </value>
            <value>
                <fullName>Regulatory Compliance Notice</fullName>
            </value>
            <value>
                <fullName>Notice of Objection</fullName>
            </value>
            <value>
                <fullName>Show Cause Notice</fullName>
            </value>
            <value>
                <fullName>Penal Action Notice</fullName>
            </value>
            <value>
                <fullName>TDS Notice</fullName>
            </value>
            <value>
                <fullName>Refund or Adjustment Notice</fullName>
            </value>
            <value>
                <fullName>Employee Notice</fullName>
            </value>
            <value>
                <fullName>Withholding Tax Notice</fullName>
            </value>
            <value>
                <fullName>Securities Notice</fullName>
            </value>
            <value>
                <fullName>Environmental Compliance Notice</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>