force-app/main/default/objects/Notices__c/fields/Notice_Summary__c.field-meta.xml
<CustomField>
    <fullName>Notice_Summary__c</fullName>
    <label>Notice Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>