force-app/main/default/objects/Notices__c/fields/Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Notice_Type__c</fullName>
    <label>Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Show Cause Notice</fullName>
            </value>
            <value>
                <fullName>Assessment Notice</fullName>
            </value>
            <value>
                <fullName>Demand Notice</fullName>
            </value>
            <value>
                <fullName>Scrutiny Notice</fullName>
            </value>
            <value>
                <fullName>Intimation Notice</fullName>
            </value>
            <value>
                <fullName>Penalty Notice</fullName>
            </value>
            <value>
                <fullName>Audit Notice</fullName>
            </value>
            <value>
                <fullName>Refund Adjustment Notice</fullName>
            </value>
            <value>
                <fullName>Compliance Notice</fullName>
            </value>
            <value>
                <fullName>Legal Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>