force-app/main/default/objects/Notices__c/fields/Penality_Amount__c.field-meta.xml
<CustomField>
    <fullName>Penality_Amount__c</fullName>
    <label>Penality Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>