force-app/main/default/objects/Notices__c/fields/Resonse_Status__c.field-meta.xml
<CustomField>
    <fullName>Resonse_Status__c</fullName>
    <label>Resonse Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Clarification Requested</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Appealed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
            <value>
                <fullName>Response Pending</fullName>
            </value>
            <value>
                <fullName>Final Decision Issued</fullName>
            </value>
            <value>
                <fullName>Follow-up Required</fullName>
            </value>
            <value>
                <fullName>Compromise Agreement</fullName>
            </value>
            <value>
                <fullName>Settlement in Process</fullName>
            </value>
            <value>
                <fullName>Amendment Proposed</fullName>
            </value>
            <value>
                <fullName>Further Documentation Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>