force-app/main/default/objects/Notices__c/fields/Response_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Submission_Date__c</fullName>
    <label>Response Submission Date</label>
    <type>Date</type>
</CustomField>