force-app/main/default/objects/Notices__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Notice_Type__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Response_Due_Date__c</columns>
    <columns>Financial_Year__c</columns>
    <columns>Tax_Period__c</columns>
    <columns>Issuing_Authority__c</columns>
    <columns>Notice_Category__c</columns>
    <columns>Notice_Summary__c</columns>
    <columns>Penality_Amount__c</columns>
    <columns>Resonse_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>